microservices-project/infrastructure/kubernetes/traefik/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: basic-auth
    namespace: default
spec:
    basicAuth:
        secret: basic-auth-secret
